--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -9,7 +9,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint --fix './**/*.{js,jsx,ts,tsx}'",
-    "generateSdk": "yarn downloadSwaggerSpec && openapi-generator-cli generate -i src/api/swagger.json -g  typescript-fetch -o src/api/generatedSdk",
+    "generateSdk": "yarn downloadSwaggerSpec && rimraf src/api/generatedSdk/* && openapi-generator-cli generate -i src/api/swagger.json -g  typescript-fetch -o src/api/generatedSdk",
     "downloadSwaggerSpec": "run-script-os",
     "downloadSwaggerSpec:nix": "curl http://localhost:5000/swagger/v1/swagger.json --output ./src/api/swagger.json",
     "downloadSwaggerSpec:windows": "curl http://localhost:5000/swagger/v1/swagger.json --Outfile ./src/api/swagger.json"
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.4",
+    "rimraf": "^5.0.1",
     "run-script-os": "^1.1.6",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^4.2.1"
