Add ability to import transactions

--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -9,7 +9,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint --fix './**/*.{js,jsx,ts,tsx}'",
-    "generateSdk": "yarn downloadSwaggerSpec && rimraf src/api/generatedSdk/* && openapi-generator-cli generate -i src/api/swagger.json -g  typescript-fetch -o src/api/generatedSdk",
+    "generateSdk": "yarn downloadSwaggerSpec && rimraf src/api/generatedSdk/* && openapi-generator-cli generate -i src/api/swagger.json -g  typescript-fetch -o src/api/generatedSdk --type-mappings=Date=string",
     "downloadSwaggerSpec": "run-script-os",
     "downloadSwaggerSpec:nix": "curl http://localhost:5000/swagger/v1/swagger.json --output ./src/api/swagger.json",
     "downloadSwaggerSpec:windows": "curl http://localhost:5000/swagger/v1/swagger.json --Outfile ./src/api/swagger.json"
@@ -18,9 +18,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.11.9",
     "formik": "^2.4.1",
+    "mui-file-input": "^2.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -36,6 +39,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.34.0",
