--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint --fix './**/*.{js,jsx,ts,tsx}'",
     "generateSdk": "yarn downloadSwaggerSpec && rimraf src/api/generatedSdk/* && openapi-generator-cli generate -i src/api/swagger.json -g  typescript-fetch -o src/api/generatedSdk --type-mappings=Date=string",
@@ -28,7 +27,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
@@ -43,6 +41,9 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
@@ -51,7 +52,11 @@
     "rimraf": "^5.0.1",
     "run-script-os": "^1.1.6",
     "typescript": "^4.9.5",
-    "typescript-plugin-css-modules": "^4.2.1"
+    "typescript-plugin-css-modules": "^4.2.1",
+    "vite": "^4.4.11",
+    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "browserslist": {
     "production": [
