--- a/clientApp/tsconfig.json
+++ b/clientApp/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noUncheckedIndexedAccess": true,
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "types": ["vite/client", "vite-plugin-svgr/client"]
   },
   "include": ["src"]
 }
