--- a/clientApp/tsconfig.json
+++ b/clientApp/tsconfig.json
@@ -15,8 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noUncheckedIndexedAccess": true,
-    "types": ["vite/client", "vite-plugin-svgr/client"]
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src"]
 }
