--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.14.4",
     "formik": "^2.4.1",
+    "luxon": "^3.4.4",
     "material-react-table": "^1.14.0",
     "mui-file-input": "^2.0.0",
     "papaparse": "^5.4.1",
@@ -37,6 +38,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^16.18.12",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.28",
