--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -14,51 +15,52 @@
     "downloadSwaggerSpec:windows": "curl http://localhost:5000/swagger/v1/swagger.json --Outfile ./src/api/swagger.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/lab": "^5.0.0-alpha.133",
-    "@mui/material": "^5.14.4",
-    "formik": "^2.4.1",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.1.0",
+    "formik": "^2.4.5",
     "luxon": "^3.4.4",
-    "material-react-table": "^1.14.0",
-    "mui-file-input": "^2.0.0",
+    "material-react-table": "^2.12.1",
+    "mui-file-input": "^4.0.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "web-vitals": "^3.5.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.6.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@openapitools/openapi-generator-cli": "^2.13.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^16.18.12",
-    "@types/papaparse": "^5.3.7",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-react": "^4.1.1",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/node": "^20.11.30",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
-    "rimraf": "^5.0.1",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
     "run-script-os": "^1.1.6",
-    "typescript": "^4.9.5",
-    "typescript-plugin-css-modules": "^4.2.1",
-    "vite": "^4.4.11",
-    "vite-plugin-checker": "^0.6.2",
+    "typescript": "^5.4.3",
+    "typescript-plugin-css-modules": "^5.1.0",
+    "vite": "^5.2.6",
+    "vite-plugin-checker": "^0.6.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^4.1.0"
+    "vite-plugin-svgr": "^4.2.0"
   },
   "browserslist": {
     "production": [
