--- a/clientApp/.eslintrc.json
+++ b/clientApp/.eslintrc.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
     "react/prop-types": [
       "error",
       {
