--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -22,6 +22,7 @@
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^7.1.0",
+    "@tanstack/react-query": "^5.31.0",
     "formik": "^2.4.5",
     "luxon": "^3.4.4",
     "material-react-table": "^2.12.1",
