--- a/server/.env.keep
+++ b/server/.env.keep
@@ -1,3 +1,7 @@
-DATABASE_CONNECTION="Host=host;Username=username;password=pw;Database=db"
+POSTGRES_HOST=
+POSTGRES_USER= 
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
 JWT_SECRET=yourSecret
 COIN_MARKET_CAP_API_KEY=
