--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -15,53 +15,49 @@
     "downloadSwaggerSpec:windows": "curl http://localhost:5000/swagger/v1/swagger.json --Outfile ./src/api/swagger.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.12",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.14",
-    "@mui/x-date-pickers": "^7.1.0",
-    "@tanstack/react-query": "^5.31.0",
-    "formik": "^2.4.5",
-    "luxon": "^3.4.4",
-    "material-react-table": "^2.12.1",
-    "mui-file-input": "^4.0.4",
-    "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^3.5.2",
-    "yup": "^1.4.0"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/lab": "^7.0.1-beta.21",
+    "@mui/material": "^7.3.7",
+    "@mui/x-date-pickers": "^8.24.0",
+    "@tanstack/react-query": "^5.90.16",
+    "formik": "^2.4.9",
+    "luxon": "^3.7.2",
+    "material-react-table": "^3.2.1",
+    "mui-file-input": "^7.0.0",
+    "papaparse": "^5.5.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.12.0",
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^5.1.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.30",
-    "@types/papaparse": "^5.3.14",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/luxon": "^3.7.1",
+    "@types/node": "^25.0.6",
+    "@types/papaparse": "^5.5.2",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "prettier": "^3.7.4",
+    "rimraf": "^6.1.2",
     "run-script-os": "^1.1.6",
-    "typescript": "^5.4.3",
-    "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.2.6",
-    "vite-plugin-checker": "^0.6.4",
+    "typescript": "^5.9.3",
+    "typescript-plugin-css-modules": "^5.2.0",
+    "vite": "^7.3.1 ",
+    "vite-plugin-checker": "^0.12.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.5.0"
   },
   "browserslist": {
     "production": [
