--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   db:
     container_name: "crypto-reporter-db"
-    image: postgres
+    image: postgres:18
     restart: "unless-stopped"
     env_file:
       - .env
@@ -29,7 +29,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - crypto-reporter-db:/var/lib/postgresql/data
+      - crypto-reporter-db:/var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "-d", "${POSTGRES_DB}"]
 
