Change api and frontend ports

--- a/server/src/Api/appsettings.json
+++ b/server/src/Api/appsettings.json
@@ -1,11 +1,5 @@
 {
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://*:5000"
-      }
-    }
-  },
+  "Urls": "http://*:5180",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
