--- a/clientApp/package.json
+++ b/clientApp/package.json
@@ -36,27 +36,28 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@nabla/vite-plugin-eslint": "^2.0.6",
     "@openapitools/openapi-generator-cli": "^2.13.1",
     "@types/luxon": "^3.7.1",
     "@types/node": "^25.0.6",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.52.0",
-    "@typescript-eslint/parser": "^8.52.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.7.4",
     "rimraf": "^6.1.2",
     "run-script-os": "^1.1.6",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
     "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.3.1 ",
     "vite-plugin-checker": "^0.12.0",
-    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.5.0"
   },
   "browserslist": {
